# p4-rs

./: .gitignore  Cargo.toml  LICENSE.txt  build.rs  conanfile.py  conanfile.txt  deploy_flat.py  readme.md
.github/workflows/: build.yml
include/: bridge.h
perforce-server/: server.bat
src/: bridge.cc  client.rs  errors.rs  lib.rs  main.rs
src/commands/: branch.rs  change.rs  changes.rs  client.rs  clients.rs  counters.rs  depot.rs  describe.rs  files.rs  fstat.rs  group.rs  helpers.rs  info.rs  label.rs  login.rs  mod.rs  opened.rs  resolve.rs  submit.rs  sync.rs  user.rs  users.rs
tests/: branch.rs  capture.rs  change.rs  changes.rs  clients.rs  counters.rs  depot.rs  file_inspect.rs  files.rs  group.rs  integration.rs  label.rs  login.rs  user.rs
tests/common/: mod.rs
