[package]
name = "p4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
disable-dropbox = []

[dependencies]
cxx = "1.0.82"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
thiserror = "1.0.37"

[build-dependencies]
cxx-build = "1.0"
