[package]
name = "p4-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.136"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
thiserror = "1.0.37"
serde_json = "1.0.138"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0"
